<resources>
    <string name="app_name">RPB App</string>
    <string name="dosen_name">Dr. Mamat Rahmat, S.Si., M.Si.</string>
    <string name="dosen_position">Dosen</string>
    <string name="organization">Struktur Organisasi</string>

    <string name="history_rpb_title">Sejarah Rekayasa Pertanian dan Biosistem FTS UIKA Bogor</string>
    <string name="history_rpb_subtitle">Rekayasa pertanian merupakan program studi yang mengkombinasikan ilmu-ilmu pertanian konvensional dengan prinsip-prinsip rekayasa biosistem untuk membangun dan mengelola sistem pertanian. Program studi ini mempelajari kompetisi teknis unggul untuk mengembangkan sistem pertanian berkelanjutan untuk mencapai swasembada kebutuhan pokok dan meningkatkan kualitas hidup masyarakat.</string>
    <string name="history_rpb_advantages_and_unique">Keunggulan dan keunikan dari prodi Rekayasa Pertanian dan Biosistem UIKA yaitu</string>
    <string name="history_rpb_advantages_and_unique_1">Mengembangkan ilmu rekayasa pertanian dan biosistem yang mendukung pertanian perkotaan dan pertanian presisi dengan tetap mengikuti konsep islam yang menyeluruh dan rahmatan lil alamin.</string>
    <string name="history_rpb_advantages_and_unique_2">Kurikulum prodi Rekayasa Pertanian dan Biosistem UIKA juga memiliki konsentrasi pada pengolahan hasil pertanian untuk mendukung pertanian masa depan sehingga SDM yang dihasilkan tidak hanya mengembangkan ilmu pada desain, manajemen, serta produksi pertanian, tetapi juga pada pengolahan hasil. </string>
    <string name="history_rpb_advantages_and_unique_3">Memiliki 6 bidang yang menjadi konsentrasi pengembangan ilmu teknik pertanian yaitu teknik mesin dan otomasi, teknik pertanian perkotaan, pertanian presisi, teknik pengolahan hasil pertanian, dan teknik informatika pertanian.</string>

    <string name="vision_mission_rpb_title">Visi Misi Rekayasa Pertanian dan Biosistem FTS UIKA Bogor</string>
    <string name="vision_title">Visi</string>
    <string name="vision_subtitle">Menjadi Program Studi Rekayasa Pertanian dan Biosistem yang unggul dalam penerapan teknologi pertanian berbasis keislaman</string>
    <string name="mission_title">Misi</string>
    <string name="mission_subtitle_1">Melaksanakan pendidikan rekayasa pertanian dan biosistem yang unggul dalam penerapan teknologi pertanian dengan prinsip keislaman.</string>
    <string name="mission_subtitle_2">Melaksanakan penelitian dan pengabdian masyarakat dalam bidang teknologi pertanian serta rekayasa biosistem.</string>
    <string name="mission_subtitle_3">Menjalin kerjasama dengan dunia usaha dan dunia industri serta pemerintahan dalam pengembangan produk teknologi pertanian</string>

    <string name="course_schedule_title">Jadwal Perkuliahan</string>

    <string name="help_title">Tentang</string>

    <string name="title_menu_1">Selamat datang di RPB App</string>
<!--    <string name="title_menu_2">Ketahui Struktur Organisasi</string>-->
<!--    <string name="title_menu_3">Mengenal Visi Misi</string>-->
    <string name="desc_menu_1">Berisi informasi seputar Rekayasa Pertanian dan Biosistem</string>
<!--    <string name="desc_menu_2">Struktur Organisasi dengan nama dosen dan jabatan</string>-->
<!--    <string name="desc_menu_3">Bagian penting mengenai Program Studi Rekayasa Pertanian dan Biosistem</string>-->
</resources>