<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity">

  <TextView
      android:id="@+id/tv_help_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/help_title"
      android:textStyle="bold"
      android:textSize="20sp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginStart="12dp"
      android:layout_marginTop="40dp"
    />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_help_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:elevation="4dp"
        app:cardCornerRadius="20dp"
        app:cardStrokeColor="@android:color/black"
        app:cardStrokeWidth="2dp"
      >

      <LinearLayout
          android:id="@+id/ll_parent"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:padding="12dp"
        >

        <LinearLayout
            android:id="@+id/ll_history_rpb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            >

          <androidx.constraintlayout.widget.ConstraintLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_rpb_title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf=""
                />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
              />

          </androidx.constraintlayout.widget.ConstraintLayout>

          <TextView
              android:id="@+id/tv_history_rpb_subtitle"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/history_rpb_subtitle"
              android:layout_marginBottom="4dp"
              android:visibility="gone"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="2dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:id="@+id/ll_vision_mission_rpb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/ll_history_rpb"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            >

          <androidx.constraintlayout.widget.ConstraintLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vision_mission_rpb_title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf=""
                />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

          </androidx.constraintlayout.widget.ConstraintLayout>

          <LinearLayout
              android:id="@+id/ll_vision_mission_rpb_subtitle"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:visibility="gone"
              android:layout_marginBottom="4dp"
              >

            <TextView
                android:id="@+id/vision_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vision_title"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/vision_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vision_subtitle"
                />

            <TextView
                android:id="@+id/mission_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mission_title"
                android:textStyle="bold"
                android:layout_marginTop="12dp"
                />

            <TextView
                android:id="@+id/mission_subtitle_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mission_subtitle_1"
                />

            <TextView
                android:id="@+id/mission_subtitle_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mission_subtitle_2"
                android:layout_marginVertical="8dp"
                />

            <TextView
                android:id="@+id/mission_subtitle_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mission_subtitle_3"
                />

          </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="2dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:id="@+id/ll_course_schedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="8dp"
            >

          <androidx.constraintlayout.widget.ConstraintLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_schedule_title"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf=""
                />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

          </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>



      </LinearLayout>

    </androidx.cardview.widget.CardView>


  </androidx.constraintlayout.widget.ConstraintLayout>